Changes the HTML and CSS properties

--- a/photo.html
+++ b/photo.html
@@ -19,9 +19,11 @@
     <div>
       <img src="/css/photos.jpeg" alt="croissant" />
       <br />
-      <a href="/index.html">Homepage</a>
-      <a href="/photo.html">Photo</a>
-      <a href="/contact.html">Contact</a>
+      <footer>
+        <a href="/index.html">Homepage</a>
+        <a href="/photo.html">Photo</a>
+        <a href="/contact.html">Contact</a>
+      </footer>
     </div>
   </body>
 </html>
