--- a/contact.html
+++ b/contact.html
@@ -23,10 +23,10 @@
       >
       for more info
     </p>
-    <div>
+    <footer>
       <a href="/index.html">Homepage</a>
       <a href="/photo.html">Photo</a>
       <a href="/contact.html">Contact</a>
-    </div>
+    </footer>
   </body>
 </html>
