--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="Contact information on croissant.com" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- CSS only -->
@@ -12,21 +13,21 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/css/styles.css" />
-    <title>Contact</title>
+    <title>Contact information on croissant.com</title>
   </head>
   <body>
     <h1>🥐 Contact us</h1>
     <p>
       To contact croissant.com, please email us at
-      <a href="mailto:hello@croissant.com " class="email"
+      <a href="mailto:hello@croissant.com " title="contact email" class="email"
         >hello@croissant.com</a
       >
       for more info
     </p>
     <footer>
-      <a href="/index.html">Homepage</a>
-      <a href="/photo.html">Photo</a>
-      <a href="/contact.html">Contact</a>
+      <a href="/">Get more information about croissant</a>
+      <a href="/photo.html">Delicious photo with croissant</a>
+      <a href="/contact.html">Contact us</a>
     </footer>
   </body>
 </html>
