--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Сroissant is a delicious bakery product associated with France on croissant.com"
+    />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- CSS only -->
@@ -12,7 +16,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/css/styles.css" />
-    <title>Homepage</title>
+    <title>Croissant - everything about croissant on Croissant.com</title>
   </head>
   <body>
     <h1>🥐 Croissant</h1>
@@ -22,9 +26,9 @@
       are made of a layered yeast-leavened dough
     </p>
     <footer>
-      <a href="/">Homepage</a>
-      <a href="/photo.html">Photo</a>
-      <a href="/contact.html">Contact</a>
+      <a href="/">Get more information about croissant</a>
+      <a href="/photo.html">Delicious photo with croissant</a>
+      <a href="/contact.html">Contact us</a>
     </footer>
   </body>
 </html>
