--- a/photo.html
+++ b/photo.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Pictures with croissant on croissant.com"
+    />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- CSS only -->
@@ -12,17 +16,17 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/css/styles.css" />
-    <title>Photo</title>
+    <title>More pictures with croissant on croissant.com</title>
   </head>
   <body>
     <h1>🥐 A picture of a croissant</h1>
     <div>
-      <img src="/css/photos.jpeg" alt="croissant" />
+      <img src="/css/photos.jpeg" alt="Delicious croissant" />
       <br />
       <footer>
-        <a href="/index.html">Homepage</a>
-        <a href="/photo.html">Photo</a>
-        <a href="/contact.html">Contact</a>
+        <a href="/">Get more information about croissant</a>
+        <a href="/photo.html">Delicious photo with croissant</a>
+        <a href="/contact.html">Contact us</a>
       </footer>
     </div>
   </body>
