Changed SEO friendly information

--- a/index.html
+++ b/index.html
@@ -2,10 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="description"
-      content="Сroissant is a delicious bakery product associated with France on croissant.com"
-    />
+    <meta name="description" content="Taste the best croissant in city" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- CSS only -->
@@ -16,7 +13,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/css/styles.css" />
-    <title>Croissant - everything about croissant on Croissant.com</title>
+    <title>The best croissant in Kyiv - croissant.com</title>
   </head>
   <body>
     <h1>🥐 Croissant</h1>
@@ -26,9 +23,9 @@
       are made of a layered yeast-leavened dough
     </p>
     <footer>
-      <a href="/">Get more information about croissant</a>
-      <a href="/photo.html">Delicious photo with croissant</a>
-      <a href="/contact.html">Contact us</a>
+      <a href="/" title="Home">Get more information about croissant</a>
+      <a href="/photo.html" title="Photo">Delicious photo with croissant</a>
+      <a href="/contact.html" title="Contact croissant.com">Contact us</a>
     </footer>
   </body>
 </html>
