--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="Contact information on croissant.com" />
+    <meta
+      name="description"
+      content="Contact croissant.com to learn more about our homemade croissants"
+    />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- CSS only -->
@@ -16,7 +19,7 @@
     <title>Contact information on croissant.com</title>
   </head>
   <body>
-    <h1>🥐 Contact us</h1>
+    <h1>🥐 Contact us - croissant.com</h1>
     <p>
       To contact croissant.com, please email us at
       <a href="mailto:hello@croissant.com " title="contact email" class="email"
@@ -25,9 +28,9 @@
       for more info
     </p>
     <footer>
-      <a href="/">Get more information about croissant</a>
-      <a href="/photo.html">Delicious photo with croissant</a>
-      <a href="/contact.html">Contact us</a>
+      <a href="/" title="Home">Get more information about croissant</a>
+      <a href="/photo.html" title="Photo">Delicious photo with croissant</a>
+      <a href="/contact.html" title="Contact croissant.com">Contact us</a>
     </footer>
   </body>
 </html>
