--- a/photo.html
+++ b/photo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Pictures with croissant on croissant.com"
+      content="Enjoy a beautiful picture of a homemade croissant"
     />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -16,7 +16,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/css/styles.css" />
-    <title>More pictures with croissant on croissant.com</title>
+    <title>An example of taste croissant on croissant.com</title>
   </head>
   <body>
     <h1>🥐 A picture of a croissant</h1>
@@ -24,9 +24,9 @@
       <img src="/css/photos.jpeg" alt="Delicious croissant" />
       <br />
       <footer>
-        <a href="/">Get more information about croissant</a>
-        <a href="/photo.html">Delicious photo with croissant</a>
-        <a href="/contact.html">Contact us</a>
+        <a href="/" title="Home">Get more information about croissant</a>
+        <a href="/photo.html" title="Photo">Delicious photo with croissant</a>
+        <a href="/contact.html" title="Contact croissant.com">Contact us</a>
       </footer>
     </div>
   </body>
